linked index to homestyle potato chips

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body> 
         <h1>Odin Recipes</h1>
+        <a href="recipes/homestyle-potato-chips.html">
+            Homestyle Potato Chips
+        </a>
     </body>
 </html>
