--- a/recipes/homestyle-potato-chips.html
+++ b/recipes/homestyle-potato-chips.html
@@ -6,5 +6,13 @@
 </head>
 <body>
     <h1>Homestyle Potato Chips</h1>
+    <img src="images/homestyle-potato-chips.jpeg">
+    <h3>Description</h3>
+    <p>Homemade potato chips are fun and easy. 
+    Guaranteed they won't last long! A food processor with a slicing 
+    attachment is very helpful for slicing the potatoes. Experiment with 
+    the thickness; you may like them thicker or thinner. I like to use 
+    olive oil for frying, but you can use safflower, corn, or peanut oil 
+    as well as vegetable oil.</p>
 </body>
 </html>
