--- a/recipes/homestyle-potato-chips.html
+++ b/recipes/homestyle-potato-chips.html
@@ -14,5 +14,11 @@
     the thickness; you may like them thicker or thinner. I like to use 
     olive oil for frying, but you can use safflower, corn, or peanut oil 
     as well as vegetable oil.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 medium potatoes, peeled and sliced paper-thin</li>
+        <li>3 tablespoons salt, plus more to taste</li>
+        <li>1 quart oil for deep frying</li>
+    </ul>
 </body>
 </html>
