Added image to index and 'alt' to all pages images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Recipes</title>
     </head>
     <body> 
-        <h1>Odin Recipes</h1>
+        <h1>Odin Appetizers Recipes</h1>
+        <img src="recipes/images/appetizers.jpg" alt="Appetizers">
+        
         <a href="recipes/homestyle-potato-chips.html">
             Homestyle Potato Chips
         </a>
