--- a/recipes/air-dried-bacon-wrapped-shrimp.html
+++ b/recipes/air-dried-bacon-wrapped-shrimp.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Air Dried Bacon Wrapped Shrimp</h1>
-    <img src="images/air-dried-bacon-wrapped-shrimp.jpeg">
+    <img src="images/air-dried-bacon-wrapped-shrimp.jpeg" alt="Air Dried Bacon Wrapped Shrimp">
     <h3>Description</h3>
     <p>Simple to put together with only 4 ingredients, but big on flavor! 
         I like to use "extra jumbo" size shrimp, which are 16-20 per pound.
@@ -34,5 +34,6 @@
         <li>Remove shrimp to a plate and drizzle with hot honey. Serve immediately, 
             being watchful of any toothpicks.</li>
     </ol>
+    <a href="../index.html"> Back to main page</a>
 </body>
 </html>
