--- a/recipes/corn-in-a-cup.html
+++ b/recipes/corn-in-a-cup.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-   <title>Corn In A Cup Elote En Vaso</title>
+   <title>Corn In A Cup (Elote En Vaso)</title>
 </head>
 <body>
     <h1>Corn In A Cup Elote En Vaso</h1>
-    <img src="images/corn-in-a-cup.jpeg">
+    <img src="images/corn-in-a-cup.jpeg" alt="Corn In A Cup (Elote En Vaso)">
     <h3>Description</h3>
     <p>Learn how to make elote en vaso with this easy recipe for Mexican 
         street food at its finest. Every time I visit El Paso or Mexico, 
@@ -45,5 +45,6 @@
              a dash of hot sauce, and a lime wedge.</li>
         
     </ol>
+    <a href="../index.html"> Back to main page</a>
 </body>
 </html>
