--- a/recipes/homestyle-potato-chips.html
+++ b/recipes/homestyle-potato-chips.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-   <title>homestyle-potato-chips</title>
+   <title>Homestyle Potato Chips</title>
 </head>
 <body>
     <h1>Homestyle Potato Chips</h1>
-    <img src="images/homestyle-potato-chips.jpeg">
+    <img src="images/homestyle-potato-chips.jpeg" alt="Homestyle Potato Chips">
     <h3>Description</h3>
     <p>Homemade potato chips are fun and easy. 
     Guaranteed they won't last long! A food processor with a slicing 
@@ -32,5 +32,6 @@
         <li>Working in small batches, fry potato slices until golden. Remove with a slotted spoon and drain on paper towels. Continue until all of the slices are fried.</li>
         <li>Season potato chips with additional salt if desired.</li>
     </ol>
+    <a href="../index.html"> Back to main page</a>
 </body>
 </html>
