Resized images on all pages

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body> 
         <h1>Odin Appetizers Recipes</h1>
-        <img src="recipes/images/appetizers.jpg" alt="Appetizers">
-        
+        <img src="recipes/images/appetizers.jpg" alt="Appetizers" style="width:850px; height: 500px;">
+        <h3>Some appetizers directed to odin learners</h3>
         <a href="recipes/homestyle-potato-chips.html">
             Homestyle Potato Chips
         </a>
