--- a/recipes/air-dried-bacon-wrapped-shrimp.html
+++ b/recipes/air-dried-bacon-wrapped-shrimp.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Air Dried Bacon Wrapped Shrimp</h1>
-    <img src="images/air-dried-bacon-wrapped-shrimp.jpeg" alt="Air Dried Bacon Wrapped Shrimp">
+    <img src="images/air-dried-bacon-wrapped-shrimp.jpeg" alt="Air Dried Bacon Wrapped Shrimp" style="width:850px; height: 500px;">
     <h3>Description</h3>
     <p>Simple to put together with only 4 ingredients, but big on flavor! 
         I like to use "extra jumbo" size shrimp, which are 16-20 per pound.
