--- a/recipes/corn-in-a-cup.html
+++ b/recipes/corn-in-a-cup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Corn In A Cup Elote En Vaso</h1>
-    <img src="images/corn-in-a-cup.jpeg" alt="Corn In A Cup (Elote En Vaso)">
+    <img src="images/corn-in-a-cup.jpeg" alt="Corn In A Cup (Elote En Vaso)" style="width:850px; height: 500px;">
     <h3>Description</h3>
     <p>Learn how to make elote en vaso with this easy recipe for Mexican 
         street food at its finest. Every time I visit El Paso or Mexico, 
