--- a/recipes/homestyle-potato-chips.html
+++ b/recipes/homestyle-potato-chips.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Homestyle Potato Chips</h1>
-    <img src="images/homestyle-potato-chips.jpeg" alt="Homestyle Potato Chips">
+    <img src="images/homestyle-potato-chips.jpeg" alt="Homestyle Potato Chips" style="width:850px; height: 500px;">
     <h3>Description</h3>
     <p>Homemade potato chips are fun and easy. 
     Guaranteed they won't last long! A food processor with a slicing 
